--- a/blog-module-jwt/pom.xml
+++ b/blog-module-jwt/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!-- 指定父项目为 weblog-springboot -->
     <parent>
         <groupId>com.jovan</groupId>
         <artifactId>blog-server</artifactId>
@@ -10,9 +9,9 @@
     </parent>
 
     <groupId>com.jovan</groupId>
-    <artifactId>blog-module-admin</artifactId>
-    <name>blog-module-admin</name>
-    <description>blog-admin (负责管理后台相关功能)</description>
+    <artifactId>blog-module-jwt</artifactId>
+    <name>blog-module-jwt</name>
+    <description>blog-module-jwt (JWT 模块，管理用户认证、鉴权)</description>
 
     <dependencies>
         <!-- 免写冗余的 Java 样板式代码 -->
@@ -27,12 +26,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <!-- knife4j -->
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- Spring Security -->
