--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>blog-module-admin</module>
         <module>blog-module-common</module>
         <module>blog-web</module>
+        <module>blog-module-jwt</module>
     </modules>
 
 
@@ -33,7 +34,7 @@
     <properties>
         <!-- 项目版本号 -->
         <revision>0.0.1-SNAPSHOT</revision>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Maven 相关 -->
@@ -41,6 +42,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <jackson.version>2.15.2</jackson.version>
         <knife4j.version>4.3.0</knife4j.version>
+        <mybatis-plus.version>3.5.2</mybatis-plus.version>
+        <p6spy.version>3.9.1</p6spy.version>
 
     </properties>
 
@@ -59,6 +62,25 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
+            </dependency>
+
+            <!-- Mybatis Plus -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>p6spy</groupId>
+                <artifactId>p6spy</artifactId>
+                <version>${p6spy.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.jovan</groupId>
+                <artifactId>blog-module-jwt</artifactId>
+                <version>${revision}</version>
             </dependency>
 
         </dependencies>
