--- a/blog-module-admin/pom.xml
+++ b/blog-module-admin/pom.xml
@@ -40,6 +40,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.jovan</groupId>
+            <artifactId>blog-module-jwt</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
