--- a/blog-module-common/pom.xml
+++ b/blog-module-common/pom.xml
@@ -61,6 +61,10 @@
             <groupId>p6spy</groupId>
             <artifactId>p6spy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
 
 
     </dependencies>
