refactor: 重构项目模块和依赖
- 移除 blog-module-common、blog-module-admin 等模块的冗余代码
- 更新项目依赖版本
- 调整 Spring Boot 应用的配置
- 重构 JWT 相关工具类和配置

--- a/blog-module-jwt/pom.xml
+++ b/blog-module-jwt/pom.xml
@@ -58,18 +58,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-        </dependency>
-
+        
         <!-- 通用模块 -->
         <dependency>
             <groupId>com.jovan</groupId>
             <artifactId>blog-module-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
